apps/base/power_sensor_monitor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-catcher
  namespace: power-sensor-monitor
spec:
  selector:
    matchLabels:
      app: webhook-catcher
  replicas: 1
  template:
    metadata:
      labels:
        app: webhook-catcher
    spec:
      containers:
      - name: webhook-catcher
        image: kc0bfv/power_sensor_monitor
        volumeMounts:
        - mountPath: "/opt/webhook_data"
          name: webhook-catcher-data
        ports:
        - containerPort: 8080
      volumes:
      - name: webhook-catcher-data
        persistentVolumeClaim:
            claimName: webhook-catcher-data
