apps/base/power_sensor_monitor/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webhook-catcher
  namespace: power-sensor-monitor
  annotations:
    kustomize.toolkit.fluxcd.io/force: enabled
  labels:
    app: webhook-catcher
spec:
  containers:
  - name: webhook-catcher
    image: kc0bfv/power_sensor_monitor
    volumeMounts:
    - mountPath: "/opt/webhook_data"
      name: webhook-catcher-data
    ports:
    - containerPort: 8080
  volumes:
  - name: webhook-catcher-data
    persistentVolumeClaim:
        claimName: webhook-catcher-data
