apps/base/power_sensor_monitor/printenv-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: printenv
  namespace: power-sensor-monitor
spec:
  containers:
  - name: printenv
    image: kc0bfv/power_sensor_monitor
    volumeMounts:
    - mountPath: "/opt/webhook_data"
      name: webhook-catcher-data
    ports:
    - containerPort: 8080
    command: ["printenv"]
  volumes:
  - name: webhook-catcher-data
    persistentVolumeClaim:
        claimName: webhook-catcher-data
