apps/base/power_sensor_monitor/power-sensor-monitor_http_redir.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: power-sensor-monitor

spec:
  redirectScheme:
    scheme: https
    permanent: true

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-redirect
  namespace: power-sensor-monitor
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: power-sensor-monitor-redirect@kubernetescrd
spec:
  rules:
    - host: power-sensor-monitor
      http:
        paths:
          - backend:
              service:
                name: power-sensor-monitor
                port:
                  number: 80
            path: /
            pathType: Prefix
